@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2009-2011, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -16,13 +16,26 @@ using namespace fostlib;
 FSL_TEST_SUITE( http_server );
 
 
-FSL_TEST_FUNCTION( mock ) {
+FSL_TEST_FUNCTION( mock_no_handler ) {
     http::server::request req(
         "GET", url::filepath_string("/"),
-        std::auto_ptr< binary_body >( new binary_body )
-    );
+        std::auto_ptr< binary_body >( new binary_body ));
     empty_mime response;
     FSL_CHECK_EXCEPTION(req( response ), exceptions::null&);
+}
+namespace {
+    void handler(bool &called, const mime &, const ascii_string &) {
+        called = true;
+    }
+}
+FSL_TEST_FUNCTION( mock_with_handler ) {
+    bool called = false;
+    http::server::request req("GET", "/",
+        std::auto_ptr< binary_body >( new binary_body ),
+        boost::bind(handler, boost::ref(called), _1, _2));
+    empty_mime response;
+    req(response);
+    FSL_CHECK(called);
 }
 
 
